# dora-back

./: .gitignore  Dockerfile  Dockerfile_with_Proxy  Dockerfile_without_Proxy  Procfile  README.md  app.py  app_ws.py  docker-compose.debug.yml  docker-compose.yml  kubernetes.yml  pyproject.toml  server.py  st_app.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  deploy.yml  docker-pipeline.yaml
chatdoc/: chat_history.py  chat_model.py  chatbot.py  citation.py  http_client.py  prompt_mode.py  vector_db.py
chatdoc/doc_loader/: document_loader.py  document_loader_factory.py
chatdoc/embed/: embedding_factory.py
serf/: methods.py
server_modules/: __init__.py  class_defs.py  database.py  final_answer_model.py  methods.py  models.py
streamlit_mods/: __init__.py  app_layout.py  endpoints.py  file_helper.py  message_helper.py  session_state_helper.py
streamlit_mods/components/: sidebar.py
streamlit_mods/helpers/: file_helper.py  session_state_helper.py
swagger/: chat_history.yml  clear_chat_history.yml  errorhandler.yml  file_del.yml  file_id_mappings.yml  identify.yml  prompt.yml  root.yml  sessions.yml  upload_files.yml  upload_files_json.yml
tests/: app_ws_test.py  chat_history_test.py  chat_model_test.py  chatbot_test.py  database_test.py  document_loader_test.py  document_methods_test.py  embedding_factory_test.py  http_client_test.py  loader_factory_test.py  prompt_mode_test.py  vector_db_test.py
