[tool.poetry]
name = "dora-backend"
version = "0.0.1"
description = "The backend for Dora"
authors = ["Rohan Sobha <rohanraysobha@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.1.0"
unstructured = "^0.10.30"
pypdf = "^3.17.1"
openpyxl = "^3.1.2"
tiktoken = "^0.5.1"
chromadb = "^0.4.17"
openai = "^1.2.4"
flask = {extras = ["async"], version = "^3.0.0"}
flask-cors = "^4.0.0"
pytest = "^7.4.3"
pydantic = "^2.5.3"
langchain-community = ">=0.0.9,<0.1.0"
langchain-core = "^0.1.7"
llama-cpp-python = {version = "0.2.11", source = "llama-cpp-python-cpu"}
gunicorn = "20.1.0"
mariadb = "^1.1.10"
sqlalchemy = "^2.0.28"
flask-executor = "^1.0.0"
flasgger = "^0.9.7.1"
nltk = "^3.8.1"
flask-socketio = "^5.3.6"
gevent = "^24.2.1"
gevent-websocket = "^0.10.1"



[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
debugpy = "^1.8.5"

# Prebuilt CPU-only wheels for llama-cpp-python, published by the project
# maintainer. PyPI only ships an sdist, so without this source poetry/pip
# must compile the C++ inference library from scratch on every cold Docker
# build (a multi-minute step). This source is only consulted for packages
# that explicitly reference it by name (priority = "explicit"), so it has no
# effect on dependency resolution for anything else.
[[tool.poetry.source]]
name = "llama-cpp-python-cpu"
url = "https://abetlen.github.io/llama-cpp-python/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
